# ml4cal

./: README.md
mc/: README.md  barrel.ipynb  barrel_oldformat.ipynb  modelMC1.py  root2numpyMC1.py  root2numpyMC2.py  validatorMC1.py
testbeam/: .gitignore  README.md  explore_dataV2.py  explore_dataV3.py  fft.ipynb  fit.ipynb  gl.onnx  globalfit.py  map.csv  mapper.py  misc.ipynb  modelV3.py  newfit.ipynb  onnxtest.C  root2numpyV2.py  root2numpyV3.py  root2short.py  rootmerge.py  template.csv  template.ipynb  templateV2.csv  torch.ipynb  validatorV3.py
testbeam/fits/: funcz.py
testbeam/onnx/: .gitignore  Makefile  Makefile-sdcc  Makefile.am  README.md  attic.C  buffer.C  build.sh  configure.ac  onnxDriver.C  onnxlib.C  onnxlib.h  onnxsession.C  onnxsession.h  onnxtest.C  onnxtest.py  onnxtestN.C  onnxutil.h  readFile.C  roottest.C  setup.sh
testbeam/onnx/attic/: Ort_examples.C  README.md  build.sh  onnxtest_reference.C  roottest.C
testbeam/onnx/models/: 20_ch27.onnx  8_ch27.onnx  README.md
